--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-mysql==4.19.0
 docutils==0.22.3
 fastapi==0.124.4
 frozenlist==1.8.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -29,6 +30,7 @@ MarkupSafe==3.0.3
 multidict==6.7.0
 nicegui==3.4.0
 orjson==3.11.5
+packaging==25.0
 propcache==0.4.1
 psycopg2-binary==2.9.11
 pydantic==2.12.5
